ajustes no projeto
